--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-6 col-md-6">
-				<img src="./images/helmet.jpg" class="img-fluid mt-5 mt-md-0 rounded-circle" width="500">
+				<img src="./images/pic1.jpg" class="img-fluid mt-5 mt-md-0 rounded-circle" width="300">
 			</div>
 
 			<div class="col-lg-6 col-md-6 col-12">
@@ -108,7 +108,7 @@
 	<!---------------- Gallery End ------------------>
 
 	<!---------------- Contact Start ------------------>
-	<div id="contact" class="offset container w-50 mx-auto mt-5 mb-5">
+	<div id="contact" class="offset container w-50 mx-auto mt-2 mb-5">
 		<div class="post-heading text-center">
 			<h3 class="display-4 font-weight-bold">Contact Me</h3>
 			<hr class="w-50 mx-auto pb-5">
