--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 	<div id="home">
 		<!----------------Navigation Start ------------------>
 
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		      <span class="navbar-toggler-icon"></span>
+		    </button>
 
-		  <div class="collapse navbar-collapse" navbar-id="navbarTogglerDemo02">
+		  <div class="collapse navbar-collapse" navbar-id="navbarNav">
 		    <ul class="navbar-nav mx-auto">
 		      <li class="nav-item active">
 		        <a class="nav-link" href="#home">Home</a>
@@ -50,7 +50,7 @@
 		<div class="bg-dark">
 			<img src="./images/bgbg.jpg" class="img-fluid">
 		</div>
-		<div class="heading-content text-center">
+		<div class="heading-content col-lg-6 col-md-6 text-center">
 			<h5>Hello, I'm</h5>
 			<h1>Justin Guardalupe</h1>
 			<p>Soon to be Full Stack Web Developer</p>
@@ -58,7 +58,7 @@
 		<!----------------Background End ------------------>
 	</div>
 	<!---------------- About Start ------------------>
-	<div id="about" class="offset container mt-5 mb-5">
+	<div id="about" class="offset container mt-2 mb-2">
 		<div class="post-heading text-center">
 			<h3 class="display-4 font-weight-bold">About Me</h3>
 			<hr class="w-50 mx-auto pb-5">
@@ -69,7 +69,7 @@
 			</div>
 
 			<div class="col-lg-6 col-md-6 col-12">
-				<h2>Wanna Know Me?</h2>
+				<h2 class="mt-3">Wanna Know Me?</h2>
 				<hr>
 				<p>
 					I'm new to the web development scene and currently able to do front-end development.
@@ -84,14 +84,14 @@
 	<!---------------- About End ------------------>
 
 	<!---------------- Services Start ------------------>
-	<div id="services" class="offset container mt-5">
+	<div id="services" class="offset container mt-2">
 		<div class="post-heading text-center">
 			<h3 class="display-4 font-weight-bold">Services</h3>
 			<hr class="w-50 mx-auto">
 		</div>
 	</div>
 	<div class="p-2 d-flex justify-content-center align-items-center flex-column">
-                    <div class="p-2 row-md-6 col-sm-6">
+                    <div class="p-2 row-md-6 col-sm-12">
                         <img width="100" src="images/logo-mongodb.png"/>
                         <img width="100" src="images/logo-nodejs.png"/>
                         <img width="100" src="images/logo-expressjs.png"/>
@@ -108,10 +108,10 @@
 	<!---------------- Gallery End ------------------>
 
 	<!---------------- Contact Start ------------------>
-	<div id="contact" class="offset container w-50 mx-auto mt-2 mb-5">
+	<div id="contact" class="offset container-liquid w-50 mx-auto mt-2 mb-5">
 		<div class="post-heading text-center">
 			<h3 class="display-4 font-weight-bold">Contact Me</h3>
-			<hr class="w-50 mx-auto pb-5">
+			<hr class="w-50 mx-auto pb-2">
 		</div>
 		<form action="/action_page.php">
 		  <div class="form-group">
@@ -134,7 +134,7 @@
 		  					    <div class="modal-dialog" role="document">
 		  					      <div class="modal-content">
 		  					        <div class="modal-header">
-		  					          <h5 class="modal-title" id="exampleModalLabel">Thank you for contacting us!</h5>
+		  					          <h5 class="modal-title" id="exampleModalLabel">Thank you for contacting me!</h5>
 		  					          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 		  					            <span aria-hidden="true">&times;</span>
 		  					          </button>
