--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		</div>
 	</div>
 	<div class="p-2 d-flex justify-content-center align-items-center flex-column">
-                    <div class="p-2 row-md-6 col-sm-12">
+                    <div class="p-2 row-md-6 col-sm-6 col-md-6">
                         <img width="100" src="images/logo-mongodb.png"/>
                         <img width="100" src="images/logo-nodejs.png"/>
                         <img width="100" src="images/logo-expressjs.png"/>
@@ -108,7 +108,7 @@
 	<!---------------- Gallery End ------------------>
 
 	<!---------------- Contact Start ------------------>
-	<div id="contact" class="offset container-liquid w-50 mx-auto mt-2 mb-5">
+	<div id="contact" class="offset container-liquid w-50 mx-auto mt-1 mb-5">
 		<div class="post-heading text-center">
 			<h3 class="display-4 font-weight-bold">Contact Me</h3>
 			<hr class="w-50 mx-auto pb-2">
